feat: Enhance course service with detailed course retrieval and new DTOs for lessons